// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AiOutputWrapper edge cases > error state snapshot when confidence is undefined 1`] = `
<div
  class="rounded-lg border border-red-300 bg-red-50 px-4 py-3 text-sm text-red-800"
  role="alert"
>
  AI confidence level missing — output cannot be displayed.
</div>
`;

exports[`AiOutputWrapper edge cases > renders children with HIGH confidence 1`] = `
<div
  class="flex flex-col gap-2"
>
  <span
    aria-label="AI Confidence: High"
    class="inline-flex items-center gap-1.5 rounded-full bg-green-50 px-2.5 py-1 text-xs font-medium text-green-700 border border-green-200"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="12"
      viewBox="0 0 12 12"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        fill="#dcfce7"
        r="5.5"
        stroke="#16a34a"
      />
      <polyline
        points="3.5,6 5,7.5 8.5,4"
        stroke="#16a34a"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
    AI Confidence: High
  </span>
  <p>
    AI result content
  </p>
</div>
`;

exports[`ConfidenceIndicator snapshots — LTR > HIGH confidence renders correctly 1`] = `
<span
  aria-label="AI Confidence: High"
  class="inline-flex items-center gap-1.5 rounded-full bg-green-50 px-2.5 py-1 text-xs font-medium text-green-700 border border-green-200"
>
  <svg
    aria-hidden="true"
    fill="none"
    height="12"
    viewBox="0 0 12 12"
    width="12"
  >
    <circle
      cx="6"
      cy="6"
      fill="#dcfce7"
      r="5.5"
      stroke="#16a34a"
    />
    <polyline
      points="3.5,6 5,7.5 8.5,4"
      stroke="#16a34a"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
  AI Confidence: High
  <span
    class="text-green-500 font-normal"
  >
    (
    92
    %)
  </span>
</span>
`;

exports[`ConfidenceIndicator snapshots — LTR > LOW confidence renders correctly 1`] = `
<div
  aria-describedby="low-confidence-body"
  aria-labelledby="low-confidence-heading"
  aria-modal="true"
  class="fixed inset-0 z-[9999] flex items-center justify-center bg-red-900/80 backdrop-blur-sm"
  data-testid="low-overlay"
  role="alertdialog"
>
  <div
    class="mx-4 max-w-lg w-full rounded-xl bg-white shadow-2xl border-2 border-red-500 p-6 flex flex-col gap-4"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="shrink-0 flex h-10 w-10 items-center justify-center rounded-full bg-red-100"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="22"
          viewBox="0 0 22 22"
          width="22"
        >
          <circle
            cx="11"
            cy="11"
            fill="#fee2e2"
            r="10"
            stroke="#dc2626"
            stroke-width="1.5"
          />
          <line
            stroke="#dc2626"
            stroke-linecap="round"
            stroke-width="2"
            x1="11"
            x2="11"
            y1="6"
            y2="13"
          />
          <circle
            cx="11"
            cy="16"
            fill="#dc2626"
            r="1"
          />
        </svg>
      </div>
      <h2
        class="text-base font-bold text-red-900"
        id="low-confidence-heading"
      >
        Low AI Confidence — Human Review Required
      </h2>
    </div>
    <p
      class="text-sm text-red-800"
      id="low-confidence-body"
    >
      I cannot reliably assess this. Request human consultation.
    </p>
    <p
      class="text-xs text-neutral-600 bg-neutral-50 rounded-md px-3 py-2"
    >
      CBC anomaly detection
    </p>
    <p
      class="text-xs text-red-600 font-medium"
    >
      30
      %
    </p>
    <div
      class="flex flex-col gap-2 pt-2"
    >
      <button
        class="w-full rounded-lg bg-red-600 px-4 py-2.5 text-sm font-semibold text-white hover:bg-red-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-red-500 focus-visible:ring-offset-2 transition-colors"
        type="button"
      >
        I Acknowledge — I Will Review Manually
      </button>
      <button
        class="w-full rounded-lg border border-red-300 bg-white px-4 py-2.5 text-sm font-semibold text-red-700 hover:bg-red-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-red-400 focus-visible:ring-offset-2 transition-colors"
        type="button"
      >
        Escalate to Physician Now
      </button>
    </div>
  </div>
</div>
`;

exports[`ConfidenceIndicator snapshots — LTR > MEDIUM confidence renders correctly 1`] = `
<div
  class="flex items-start gap-3 w-full rounded-lg border border-amber-300 bg-amber-50 px-4 py-3"
  data-testid="medium-banner"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="shrink-0 mt-0.5 text-amber-600"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
  >
    <path
      d="M9.05 3.22L2.27 15a1 1 0 0 0 .88 1.5h13.7a1 1 0 0 0 .88-1.5L10.95 3.22a1.05 1.05 0 0 0-1.9 0Z"
      fill="#fef3c7"
      stroke="#d97706"
      stroke-width="1.2"
    />
    <line
      stroke="#d97706"
      stroke-linecap="round"
      stroke-width="1.4"
      x1="10"
      x2="10"
      y1="8"
      y2="12"
    />
    <circle
      cx="10"
      cy="14"
      fill="#d97706"
      r="0.75"
    />
  </svg>
  <div
    class="min-w-0 flex-1"
  >
    <p
      class="text-sm font-semibold text-amber-900"
    >
      AI Confidence: Medium
    </p>
    <p
      class="text-sm text-amber-800 mt-0.5"
    >
      The AI's assessment has moderate certainty. Review the output carefully.
    </p>
    <p
      class="text-xs text-amber-700 mt-1"
    >
      CBC anomaly detection
    </p>
    <p
      class="text-xs text-amber-600 mt-0.5"
    >
      65
      %
    </p>
  </div>
</div>
`;

exports[`ConfidenceIndicator snapshots — RTL > HIGH confidence renders correctly in RTL 1`] = `
<div
  dir="rtl"
>
  <span
    aria-label="AI Confidence: High"
    class="inline-flex items-center gap-1.5 rounded-full bg-green-50 px-2.5 py-1 text-xs font-medium text-green-700 border border-green-200"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="12"
      viewBox="0 0 12 12"
      width="12"
    >
      <circle
        cx="6"
        cy="6"
        fill="#dcfce7"
        r="5.5"
        stroke="#16a34a"
      />
      <polyline
        points="3.5,6 5,7.5 8.5,4"
        stroke="#16a34a"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
    AI Confidence: High
    <span
      class="text-green-500 font-normal"
    >
      (
      92
      %)
    </span>
  </span>
</div>
`;

exports[`ConfidenceIndicator snapshots — RTL > LOW confidence renders correctly in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    aria-describedby="low-confidence-body"
    aria-labelledby="low-confidence-heading"
    aria-modal="true"
    class="fixed inset-0 z-[9999] flex items-center justify-center bg-red-900/80 backdrop-blur-sm"
    data-testid="low-overlay"
    role="alertdialog"
  >
    <div
      class="mx-4 max-w-lg w-full rounded-xl bg-white shadow-2xl border-2 border-red-500 p-6 flex flex-col gap-4"
    >
      <div
        class="flex items-center gap-3"
      >
        <div
          class="shrink-0 flex h-10 w-10 items-center justify-center rounded-full bg-red-100"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="22"
            viewBox="0 0 22 22"
            width="22"
          >
            <circle
              cx="11"
              cy="11"
              fill="#fee2e2"
              r="10"
              stroke="#dc2626"
              stroke-width="1.5"
            />
            <line
              stroke="#dc2626"
              stroke-linecap="round"
              stroke-width="2"
              x1="11"
              x2="11"
              y1="6"
              y2="13"
            />
            <circle
              cx="11"
              cy="16"
              fill="#dc2626"
              r="1"
            />
          </svg>
        </div>
        <h2
          class="text-base font-bold text-red-900"
          id="low-confidence-heading"
        >
          Low AI Confidence — Human Review Required
        </h2>
      </div>
      <p
        class="text-sm text-red-800"
        id="low-confidence-body"
      >
        I cannot reliably assess this. Request human consultation.
      </p>
      <p
        class="text-xs text-neutral-600 bg-neutral-50 rounded-md px-3 py-2"
      >
        فحص نخاع الدم
      </p>
      <p
        class="text-xs text-red-600 font-medium"
      >
        30
        %
      </p>
      <div
        class="flex flex-col gap-2 pt-2"
      >
        <button
          class="w-full rounded-lg bg-red-600 px-4 py-2.5 text-sm font-semibold text-white hover:bg-red-700 focus:outline-none focus-visible:ring-2 focus-visible:ring-red-500 focus-visible:ring-offset-2 transition-colors"
          type="button"
        >
          I Acknowledge — I Will Review Manually
        </button>
        <button
          class="w-full rounded-lg border border-red-300 bg-white px-4 py-2.5 text-sm font-semibold text-red-700 hover:bg-red-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-red-400 focus-visible:ring-offset-2 transition-colors"
          type="button"
        >
          Escalate to Physician Now
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfidenceIndicator snapshots — RTL > MEDIUM confidence renders correctly in RTL 1`] = `
<div
  dir="rtl"
>
  <div
    class="flex items-start gap-3 w-full rounded-lg border border-amber-300 bg-amber-50 px-4 py-3"
    data-testid="medium-banner"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="shrink-0 mt-0.5 text-amber-600"
      fill="none"
      height="20"
      viewBox="0 0 20 20"
      width="20"
    >
      <path
        d="M9.05 3.22L2.27 15a1 1 0 0 0 .88 1.5h13.7a1 1 0 0 0 .88-1.5L10.95 3.22a1.05 1.05 0 0 0-1.9 0Z"
        fill="#fef3c7"
        stroke="#d97706"
        stroke-width="1.2"
      />
      <line
        stroke="#d97706"
        stroke-linecap="round"
        stroke-width="1.4"
        x1="10"
        x2="10"
        y1="8"
        y2="12"
      />
      <circle
        cx="10"
        cy="14"
        fill="#d97706"
        r="0.75"
      />
    </svg>
    <div
      class="min-w-0 flex-1"
    >
      <p
        class="text-sm font-semibold text-amber-900"
      >
        AI Confidence: Medium
      </p>
      <p
        class="text-sm text-amber-800 mt-0.5"
      >
        The AI's assessment has moderate certainty. Review the output carefully.
      </p>
      <p
        class="text-xs text-amber-700 mt-1"
      >
        فحص نخاع الدم
      </p>
      <p
        class="text-xs text-amber-600 mt-0.5"
      >
        65
        %
      </p>
    </div>
  </div>
</div>
`;
